# rs-subscribe

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: github-actions.yml
docs/: database.md  detail.md  payment_method.md  requirement_definition.md
docs/api_manual/: api_spec.md
docs/api_manual/endpoints/: auth.md  category.md  subscribe.md
docs/error_spec/: error_spec.md
docs/table_definitions/: database.md  table_definitions.md
docs/test_spec/: test_spec.md
docs/validation_spec/: validation_spec.md
docs/wbs/: wbs.md
domain/src/: main.rs  subscribe.rs
domain/src/subscribe/: subscribe_id.rs
scripts/: run-all.sh  run-clippy.sh  run-fmt.sh  run-test.sh
scripts/deploy/: deploy.sh  ecr-deploy.sh
server/: Cargo.toml
server/src/: app_state.rs  client.rs  controller.rs  lib.rs  main.rs  middlewares.rs
server/src/controller/: category_controller.rs  params.rs  payment_method_controller.rs  subscribe_controller.rs
server/src/controller/params/: category_params.rs  payment_method_params.rs  subscribe_params.rs
server/src/middlewares/: logging_middleware.rs
src/application/: Cargo.toml
src/application/src/: dtos.rs  error.rs  lib.rs  service.rs
src/application/src/dtos/: category_dto.rs  payment_method_dto.rs  subscribe_dto.rs
src/application/src/service/: category_service.rs  payment_method_service.rs  subscribe_service.rs
src/domain/: Cargo.toml
src/domain/src/: category.rs  lib.rs  payment.rs  payment_cycle.rs  repository.rs  subscribe.rs  user.rs
src/domain/src/category/: category_error.rs  category_id.rs  category_name.rs
src/domain/src/payment/: payment_error.rs  payment_errpr.rs  payment_method.rs  payment_method_id.rs  payment_method_name.rs
src/domain/src/repository/: category_repository.rs  payment_repository.rs  subscribe_repository.rs  user_repository.rs
src/domain/src/subscribe/: subscribe_error.rs  subscribe_id.rs  subscribe_name.rs  subscribe_status.rs
src/domain/src/user/: user_id.rs
src/domain/src/value_object/: amount.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: lib.rs  mapper.rs  repository_impl.rs
src/infrastructure/src/entity/: mapper.rs  payment.rs
src/infrastructure/src/repository_impl/: category_repository_impl.rs  payment_repository_impl.rs  subscribe_repository_impl.rs
src/presentation/src/controller/: payment_method_controller.rs
terraform/: main.tf
terraform/ecr/: ecr.tf
terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
terraform/lambda/: lambda.tf
terraform/modules/dynamodb/: main.tf  output.tf  variables.tf
terraform/modules/ecr/: main.tf  output.tf  variables.tf
terraform/modules/lambda/: main.tf  output.tf  variables.tf
