[workspace]
resolver = "2"
members = [
    "src/server",
    "src/domain",
    "src/presentation",
    "src/infrastructure"
]

[workspace.dependencies]
axum = "0.7.7"
async-trait = "0.1.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.90"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = "1.0.213"
serde_json = "1.0.132"
thiserror = "1.0.65"
rust_decimal = "1.36.0"
chrono = "0.4.38"

# test
rstest = "0.23.0"