[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

domain = { path = "../domain" }
